added seller dashboard, delivery features

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.16.2",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.5",
+    "pdfkit": "^0.17.1",
     "stripe": "^18.3.0"
   },
   "devDependencies": {
