--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,9 @@
     "@mui/material": "^7.2.0",
     "@tanstack/react-query": "^5.81.5",
     "axios": "^1.10.0",
+    "debounce": "^2.2.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
