--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
     "react-toastify": "^11.0.5",
+    "react-zoom-pan-pinch": "^3.7.0",
     "swiper": "^11.2.10",
     "yup": "^1.6.1"
   },
